# vert-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  PROJECT_DEEP_DIVE.txt  README.md  pyproject.toml
scripts/: calibrate.py  record_session.py  validate_accuracy.py
src/: main.py
src/analysis/: __init__.py  calculator.py  detector.py  metrics.py
src/core/: __init__.py  exceptions.py
src/drone/: __init__.py  controller.py  stream.py
src/pipeline/: __init__.py  processor.py
src/ui/: __init__.py  display.py  hud.py
src/vert_tracker/: __init__.py  main.py
src/vert_tracker/analysis/: __init__.py  calculator.py  detector.py  metrics.py
src/vert_tracker/core/: __init__.py  config.py  logging.py  types.py
src/vert_tracker/drone/: __init__.py  controller.py  stream.py
src/vert_tracker/pipeline/: __init__.py  processor.py
src/vert_tracker/ui/: __init__.py  display.py  hud.py
src/vert_tracker/vision/: __init__.py  calibration.py  filters.py  overlay.py  pose.py
src/vision/: __init__.py  calibration.py  filters.py  overlay.py  pose.py
tests/: __init__.py  conftest.py  test_calculator.py  test_calibration.py  test_detector.py  test_filters.py
